# strata

./: .gdbinit  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  HISTORY.rst  LICENSE  README  README.md  README.rst  TODO  appimage.sh  appveyor.yml  build_msys.sh  getSvnVersion.py  installer.nsi  make_installers.py  strata.pro  strataconfig.pri  strataconfig.pri.example  update_vcpkg.sh  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build-linux.yml  build-windows.yml  clang-format.yml  example-tests.yml  release.yml
.travis/: build.sh  bundle.sh  install.sh  install_linux.sh  install_osx.sh
cmake/: macos_bundle_fixup.cmake.in
cmake/Modules/: FindFFTW.cmake  FindGSL.cmake  FindQwt.cmake
contrib/: github-action-build-deps-linux.sh  github-action-build-linux.sh  github-action-build-strata-linux.sh  github-action-install-qwt.sh  github-action-make-appimage.sh  github-action-run-strata.sh  install_appveyor_dependencies.bat  make-appimage.sh  travis-bundle-linux.sh  travis-bundle-osx.sh  travis-deploy.sh  travis-install-linux.sh  travis-install-osx.sh  travis-make-appimage.sh
example/: README.md  example-01.json  example-01.strata  example-02.json  example-02.strata  example-03.json  example-03.strata  example-04.json  example-04.strata  example-05.json  example-05.strata  example-06.json  example-06.strata  example-07.json  example-07.strata  example-08.json  example-08.strata  example-09.json  example-09.strata  example-1-td-NEW.strata  example-1-td.json  example-1-td.strata  example-2-td.strata  example-3-rvt.json  example-3-rvt.strata  example-4-rvt.json  sch-rvt.stri  shake-example-fas.stri  suite-10-1.csv
manual/: CMakeLists.txt  manual.tex  references.bib
manual/figures/: convertToPng.py
manual/scripts/: irvt-corrections.py  rand-poisson-process.py  rvt-method.py  sdof-transfer-function.py  sra-example.py  time-domain-method.py
middleware/: invoke
obsolete/: SeriesSmoother.cpp  SeriesSmoother.h
resources/: CMakeLists.txt  resources.qrc  strata.cmake.desktop
resources/data/: cena_bt12_trms4osc.json  cena_bt12_trms4osc.pars  cena_bt15_trms4osc.json  cena_bt15_trms4osc.pars  wna_bt12_trms4osc.json  wna_bt12_trms4osc.pars  wna_bt15_trms4osc.json  wna_bt15_trms4osc.pars
resources/docs/: general-settings-tab.html  index.html  nonlinear-curve-dialog.html  output-page.html  output-specification-tab.html  soil-profile-tab.html  soil-profile.html  soil-type.html  soil-types-tab.html
resources/images/: application-icon.icns
scripts/: appimage.sh  build_msys.sh  compare_examples.py  createIcons.py  create_zip.sh  fix_macos_frameworks.sh  get_release_fetches.py  get_version.py  make_installers.py  pars_to_json.py  strata.cgi
source/: AbstractCalculator.cpp  AbstractCalculator.h  AbstractDistribution.cpp  AbstractDistribution.h  AbstractIterativeCalculator.cpp  AbstractIterativeCalculator.h  AbstractLocationOutput.cpp  AbstractLocationOutput.h  AbstractMotion.cpp  AbstractMotion.h  AbstractMutableOutputCatalog.cpp  AbstractMutableOutputCatalog.h  AbstractNonlinearPropertyFactory.cpp  AbstractNonlinearPropertyFactory.h  AbstractOutput.cpp  AbstractOutput.h  AbstractOutputCatalog.cpp  AbstractOutputCatalog.h  AbstractOutputInterpolater.cpp  AbstractOutputInterpolater.h  AbstractPage.cpp  AbstractPage.h  AbstractPeakCalculator.cpp  AbstractPeakCalculator.h  AbstractProfileOutput.cpp  AbstractProfileOutput.h  AbstractRatioOutput.cpp  AbstractRatioOutput.h  AbstractRvtMotion.cpp  AbstractRvtMotion.h  AbstractRvtMotionDialog.cpp  AbstractRvtMotionDialog.h  AbstractSteppedProfileOutput.cpp  AbstractSteppedProfileOutput.h  AbstractTimeSeriesOutput.cpp  AbstractTimeSeriesOutput.h  AccelTimeSeriesOutput.cpp  AccelTimeSeriesOutput.h  AccelTransferFunctionOutput.cpp  AccelTransferFunctionOutput.h  (+250 more)
src/: AbstractCalculator.cpp  AbstractCalculator.h  AbstractDistribution.cpp  AbstractDistribution.h  AbstractIterativeCalculator.cpp  AbstractIterativeCalculator.h  AbstractLocationOutput.cpp  AbstractLocationOutput.h  AbstractMotion.cpp  AbstractMotion.h  AbstractMutableOutputCatalog.cpp  AbstractMutableOutputCatalog.h  AbstractNonlinearPropertyFactory.cpp  AbstractNonlinearPropertyFactory.h  AbstractNonlinearPropertyStandardDeviation.cpp  AbstractNonlinearPropertyStandardDeviation.h  AbstractOutput.cpp  AbstractOutput.h  AbstractOutputCatalog.cpp  AbstractOutputCatalog.h  AbstractOutputInterpolater.cpp  AbstractOutputInterpolater.h  AbstractPage.h  AbstractProfileOutput.cpp  AbstractProfileOutput.h  AbstractRatioOutput.cpp  AbstractRvtMotion.cpp  AbstractRvtMotion.h  AbstractSteppedProfileOutput.h  AbstractTimeSeriesOutput.cpp  AbstractTimeSeriesOutput.h  AccelTimeSeriesOutput.cpp  AccelTransferFunctionOutput.cpp  Algorithms.cpp  Algorithms.h  BatchRunner.cpp  BedrockDepthVariation.cpp  BedrockDepthVariation.h  CheckBoxDelegate.h  ColumnTableModel.h  (+232 more)
test/: calc_response_spectra.py  response_spectra.csv  response_spectra.ods  test-strain.strata  test.strata
test/shake2000b/: example.ath  example.inp  example.out  example.pro  example.tfs
tests/: comparison.xlsx  test.strata
tests/shake2000b/: example.ath  example.inp  example.out  example.pro
trunk/: Doxyfile  TODO  getSvnVersion.py  installer.nsi  strata.pro  strata.rc  strataconfig.pri
trunk/example/: example-1-td.strata  example-2-td.strata  example-3-rvt.strata  response-spectrum.csv  shake-example-rvt.stri  shake-example.stri  simple.stri  suite-10-1.csv
trunk/manual/: manual.tex
trunk/middleware/: invoke
trunk/resources/: resources.qrc
trunk/src/: AbstractCalculator.cpp  AbstractCalculator.h  AbstractDistribution.cpp  AbstractDistribution.h  AbstractIterativeCalculator.cpp  AbstractIterativeCalculator.h  AbstractLocationOutput.h  AbstractMotion.cpp  AbstractMotion.h  AbstractMutableOutputCatalog.cpp  AbstractMutableOutputCatalog.h  AbstractNonlinearPropertyFactory.cpp  Algorithms.h  (+272 more)
ui/: EmpiricalCurveDialog.ui  GenericCurveDialog.ui  HelpDialog.ui  MainWindow.ui  MotionDialog.ui
win/: CMakeLists.txt  installer.cmake.wxs  resources.rc
(+45 files in other folders)
